# fractals

./: README.md  fractal_renderer_bg.e0d166e0.wasm  fractals.code-workspace  index.6bd7ab5b.css  index.6bd7ab5b.css.map  index.97b727c5.js  index.97b727c5.js.map  index.b17da3a9.js  index.b17da3a9.js.map  index.html  package.json
src/: build.js
src/fractal-renderer/: Cargo.toml  LICENSE_MIT
src/fractal-renderer/src/: graphics.rs  lib.rs
src/fractal-renderer/src/graphics/: shader.wgsl  state.rs
src/site/: package-lock.json  package.json
src/site/src/: index.html  index.scss
src/site/src/js/: index.js
