[package]
name = "fractal-renderer"
version = "0.1.0"
authors = ["Christopher Chamberlain <chambca@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.20"
wgpu = { version = "0.17.0", features = [ "webgl" ] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
pollster = "0.3.0"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
instant = { version = "0.1.12", features = [ "wasm-bindgen" ] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
